--- a/aioquic/examples/templates/index.html
+++ b/aioquic/examples/templates/index.html
@@ -2,15 +2,73 @@
   <head>
     <!-- <link rel="stylesheet" type="text/css" href="./style.css" /> -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dashjs/3.1.2/dash.all.min.js"></script>
+      <style>
+        video {
+          position: fixed;
+          width: 80%;
+          height: 50%;
+          left: 10%;
+          right: 10%;
+          top: 20%;
+        }
+      </style>
   </head>
   <body>
     <div>
       <div>
         <video autoplay="" preload="none" muted="true" controls="true">
-            <source src="/myvideo.mpd" type="application/dash+xml">
+            <!-- <source src="/myvideo.mpd" type="application/dash+xml"> -->
         </video>
       </div>
     </div>
     <!-- <script type="text/javascript" src="./script.js"></script> -->
+    <script>
+      function init() {
+          var video,
+              player,
+              url = "/myvideo.mpd";
+          var counter = 0;
+          var localCounter = parseInt(localStorage.getItem('experiment'));
+          var link = new URL(window.location.href);
+          var value = '';
+          
+
+          if(localCounter >= 0 && localCounter <= 3){
+            counter = localCounter+1;
+            console.log('experiment Number',localCounter);
+            localStorage.setItem('experiment', counter);
+            console.log('experiment Number',counter);
+            // console.log(counter);
+          }else{
+            console.log('experiment Number Reset',counter);
+            localStorage.setItem('experiment', 0);
+          }
+
+          value = link.searchParams.get('v')+'_'+link.searchParams.get('l')+'_'+ link.searchParams.get('d')+'_'+counter;
+          console.log(value);
+          video = document.querySelector("video");
+          player = dashjs.MediaPlayer().create();
+          
+          /* Extend RequestModifier class and implement our own behaviour */
+          player.extend("RequestModifier", function () {
+              return {
+                  modifyRequestHeader: function (xhr) {
+                      /* Add custom header. Requires to set up Access-Control-Allow-Headers in your */
+                      /* response header in the server side. Reference: https://developer.mozilla.org/en-US/docs/Web/API/XMLHttpRequest/setRequestHeader */
+                      /* xhr.setRequestHeader('DASH-CUSTOM-HEADER', 'MyValue'); */
+                      return xhr;
+                  },
+                  modifyRequestURL: function (url) {
+                      /* Modify url adding a custom query string parameter */
+                      
+
+                      return url + '?customQuery='+ value;
+                  }
+              };
+          });
+          player.initialize(video, url, true);
+      }
+      init()
+  </script>
   </body>
 </html>
