--- a/aioquic/examples/templates/index.html
+++ b/aioquic/examples/templates/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <!-- <link rel="stylesheet" type="text/css" href="./style.css" /> -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dashjs/3.1.2/dash.all.min.js"></script>
+    <script type="text/javascript" src="/dash.js"></script>
       <style>
         video {
           position: fixed;
@@ -44,7 +44,7 @@
             localStorage.setItem('experiment', 0);
           }
 
-          value = link.searchParams.get('v')+'_'+link.searchParams.get('l')+'_'+ link.searchParams.get('d')+'_'+counter;
+          value = link.searchParams.get('v')+'_'+link.searchParams.get('l')+'_'+ link.searchParams.get('d')+'_'+link.searchParams.get('number');
           console.log(value);
           video = document.querySelector("video");
           player = dashjs.MediaPlayer().create();
@@ -67,6 +67,164 @@
               };
           });
           player.initialize(video, url, true);
+
+          player.updateSettings({
+            streaming: {
+           abandonLoadTimeout: 10000,
+           wallclockTimeUpdateInterval: 100,
+           lowLatencyEnabled: false,
+           lowLatencyEnabledByManifest: true,
+           manifestUpdateRetryInterval: 100,
+           cacheInitSegments: true,
+           eventControllerRefreshDelay: 100,
+           capabilities: {
+              filterUnsupportedEssentialProperties: true,
+              useMediaCapabilitiesApi: false
+           },
+           timeShiftBuffer: {
+               calcFromSegmentTimeline: false,
+               fallbackToSegmentTimeline: true
+           },
+           metrics: {
+             maxListDepth: 100
+           },
+           delay: {
+               liveDelayFragmentCount: NaN,
+               liveDelay: NaN,
+               useSuggestedPresentationDelay: true,
+               applyServiceDescription: true
+           },
+           protection: {
+               keepProtectionMediaKeys: false
+           },
+           buffer: {
+               enableSeekDecorrelationFix: true,
+               fastSwitchEnabled: true,
+               flushBufferAtTrackSwitch: false,
+               reuseExistingSourceBuffers: true,
+               bufferPruningInterval: 10,
+               bufferToKeep: 10,
+               bufferTimeAtTopQuality: 30,
+               bufferTimeAtTopQualityLongForm: 20,
+               initialBufferLevel: NaN,
+               stableBufferTime: 10,
+               longFormContentDurationThreshold: 50,
+               stallThreshold: 0.5,
+               useAppendWindow: true,
+               setStallState: false
+           },
+           gaps: {
+               jumpGaps: true,
+               jumpLargeGaps: true,
+               smallGapLimit: 1.5,
+               threshold: 0.3,
+               enableSeekFix: false
+           },
+           utcSynchronization: {
+               enabled: true,
+               useManifestDateHeaderTimeSource: true,
+               backgroundAttempts: 2,
+               timeBetweenSyncAttempts: 30,
+               maximumTimeBetweenSyncAttempts: 600,
+               minimumTimeBetweenSyncAttempts: 2,
+               timeBetweenSyncAttemptsAdjustmentFactor: 2,
+               maximumAllowedDrift: 100,
+               enableBackgroundSyncAfterSegmentDownloadError: true,
+               defaultTimingSource: {
+                   scheme: 'urn:mpeg:dash:utc:http-xsdate:2014',
+                   value: 'http://time.akamai.com/?iso&ms'
+               }
+           },
+           scheduling: {
+               defaultTimeout: 300,
+               lowLatencyTimeout: 100,
+               scheduleWhilePaused: true
+           },
+           text: {
+               defaultEnabled: true
+           },
+           liveCatchup: {
+               minDrift: 0.02,
+               maxDrift: 12,
+               playbackRate: 0.5,
+               latencyThreshold: 60,
+               playbackBufferMin: 0.5,
+               enabled: false,
+               mode: Constants.LIVE_CATCHUP_MODE_DEFAULT
+           },
+           lastBitrateCachingInfo: { enabled: true, ttl: 360000 },
+           lastMediaSettingsCachingInfo: { enabled: true, ttl: 360000 },
+           cacheLoadThresholds: { video: 50, audio: 5 },
+           trackSwitchMode: {
+               audio: Constants.TRACK_SWITCH_MODE_ALWAYS_REPLACE,
+               video: Constants.TRACK_SWITCH_MODE_NEVER_REPLACE
+           },
+           selectionModeForInitialTrack: Constants.TRACK_SELECTION_MODE_HIGHEST_SELECTION_PRIORITY,
+           fragmentRequestTimeout: 0,
+           retryIntervals: {
+               [HTTPRequest.MPD_TYPE]: 500,
+               [HTTPRequest.XLINK_EXPANSION_TYPE]: 500,
+               [HTTPRequest.MEDIA_SEGMENT_TYPE]: 1000,
+               [HTTPRequest.INIT_SEGMENT_TYPE]: 1000,
+               [HTTPRequest.BITSTREAM_SWITCHING_SEGMENT_TYPE]: 1000,
+               [HTTPRequest.INDEX_SEGMENT_TYPE]: 1000,
+               [HTTPRequest.MSS_FRAGMENT_INFO_SEGMENT_TYPE]: 1000,
+               [HTTPRequest.LICENSE]: 1000,
+               [HTTPRequest.OTHER_TYPE]: 1000,
+               lowLatencyReductionFactor: 10
+           },
+           retryAttempts: {
+               [HTTPRequest.MPD_TYPE]: 3,
+               [HTTPRequest.XLINK_EXPANSION_TYPE]: 1,
+               [HTTPRequest.MEDIA_SEGMENT_TYPE]: 3,
+               [HTTPRequest.INIT_SEGMENT_TYPE]: 3,
+               [HTTPRequest.BITSTREAM_SWITCHING_SEGMENT_TYPE]: 3,
+               [HTTPRequest.INDEX_SEGMENT_TYPE]: 3,
+               [HTTPRequest.MSS_FRAGMENT_INFO_SEGMENT_TYPE]: 3,
+               [HTTPRequest.LICENSE]: 3,
+               [HTTPRequest.OTHER_TYPE]: 3,
+               lowLatencyMultiplyFactor: 5
+           },
+           abr: {
+               movingAverageMethod: Constants.MOVING_AVERAGE_SLIDING_WINDOW,
+               ABRStrategy: Constants.ABR_STRATEGY_DYNAMIC,
+               additionalAbrRules: {
+                  insufficientBufferRule: false,
+                  switchHistoryRule: true,
+                  droppedFramesRule: true,
+                  abandonRequestsRule: false
+               },
+               bandwidthSafetyFactor: 0.9,
+               useDefaultABRRules: true,
+               useDeadTimeLatency: true,
+               limitBitrateByPortal: false,
+               usePixelRatioInLimitBitrateByPortal: false,
+               maxBitrate: { audio: -1, video: -1 },
+               minBitrate: { audio: -1, video: -1 },
+               maxRepresentationRatio: { audio: 1, video: 1 },
+               initialBitrate: { audio: -1, video: -1 },
+               initialRepresentationRatio: { audio: -1, video: -1 },
+               autoSwitchBitrate: { audio: true, video: true },
+               fetchThroughputCalculationMode: Constants.ABR_FETCH_THROUGHPUT_CALCULATION_DOWNLOADED_DATA
+           },
+           cmcd: {
+               enabled: false,
+               sid: null,
+               cid: null,
+               rtp: null,
+               rtpSafetyFactor: 5,
+               mode: Constants.CMCD_MODE_QUERY
+           }
+         },
+         errors: {
+           recoverAttempts: {
+               mediaErrorDecode: 5
+            }
+         },
+         'debug': {
+                  'logLevel': dashjs.Debug.LOG_LEVEL_INFO
+                }
+        });
       }
       init()
   </script>
